klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/user/UserIdTypeErrorTest.klass
package com.errors

user User
{
    userId: Instant key userId;
}
